force-app/main/default/objects/ULBC_Xero_Sync_Log__c/ULBC_Xero_Sync_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail for Xero income import runs (Phase 6A). One row per scheduled run (and one per page if the run paginates), recording counts of transactions read, opportunities created, orphans created, and skipped duplicates. Status=Error rows pinpoint failed runs for retry.</description>
    <label>ULBC Xero Sync Log</label>
    <nameField>
        <displayFormat>XSL-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULBC Xero Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>