force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Deferred_No_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Deferred_No_AccountNumber__c</fullName>
    <description>Count of Xero transactions on this page-run that had no AccountNumber set on the Xero Contact and were deferred — not imported as Opportunities. They will be re-pulled on the next run because the watermark is held back at min(deferred UpdatedDateUTC) - 1ms. See Decision 6.14.</description>
    <label>Deferred (No AccountNumber)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>