force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Error_Message__c</fullName>
    <description>Detail when Status is Error or Partial — exception message, HTTP status, or per-row failure summary. Plain text only, no secrets.</description>
    <label>Error Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>