force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Opportunities_Created__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Opportunities_Created__c</fullName>
    <description>Count of new Opportunities inserted by this page (matched + orphan).</description>
    <label>Opportunities Created</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>