force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Orphans_Created__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Orphans_Created__c</fullName>
    <description>Subset of Opportunities Created where the Xero AccountNumber did not match any SF Contact&apos;s Trust ID. These need manual triage via the &quot;Unassigned Xero Income&quot; list view.</description>
    <label>Orphans Created</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>