force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Page_Number__c</fullName>
    <description>Which page of the Xero BankTransactions response this log row covers. The importer chains pages via Queueable, so a single calendar run can produce multiple Sync Log rows (one per page).</description>
    <label>Page Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>