force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Run_Finished__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Run_Finished__c</fullName>
    <description>When this importer run (or page chain step) finished. UTC. Null if the run threw before completion.</description>
    <label>Run Finished</label>
    <type>DateTime</type>
</CustomField>