force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Run_Started__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Run_Started__c</fullName>
    <description>When this importer run (or page chain step) began. UTC.</description>
    <label>Run Started</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>