force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Skipped_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Skipped_Duplicates__c</fullName>
    <description>Count of Xero transactions skipped because a previous run already imported them (Unique constraint on Opportunity.ULBC_Xero_Transaction_ID__c). Healthy on retries; should be near-zero on a fresh forward-running schedule.</description>
    <label>Skipped Duplicates</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>