force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Status__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Status__c</fullName>
    <description>Outcome of the importer page run. Success = page committed cleanly. Partial = some rows committed, some failed (per-row errors in ULBC_Error_Message__c). Error = nothing committed (auth failure, rate limit, parse error).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>