force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Transactions_Read__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Transactions_Read__c</fullName>
    <description>Number of Xero BankTransactions returned by this page of the API call.</description>
    <label>Transactions Read</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>