force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Watermark_After__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Watermark_After__c</fullName>
    <description>Value LastSyncedAt__c was advanced to at the end of this run. Equals the most recent UpdatedDateUTC seen in the response page. Null on Error rows (watermark not advanced on failure).</description>
    <label>Watermark After</label>
    <type>DateTime</type>
</CustomField>