force-app/main/default/objects/ULBC_Xero_Sync_Log__c/fields/ULBC_Watermark_Before__c.field-meta.xml
<CustomField>
    <fullName>ULBC_Watermark_Before__c</fullName>
    <description>Value of ULBC_Xero_Settings__c.LastSyncedAt__c at the start of this run. Lets us reproduce a run by replaying with the same watermark.</description>
    <label>Watermark Before</label>
    <type>DateTime</type>
</CustomField>